<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:id="@+id/scrollView_Options"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/custom_button"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cloud_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/cloud_description"
                app:srcCompat="@drawable/ic_download_complete" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_margin"
                android:gravity="center_vertical">

                <RadioButton
                    android:id="@+id/radio_glide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/main_margin"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/glide_download_description" />

                <RadioButton
                    android:id="@+id/radio_project"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/main_margin"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/udacity_download_description" />

                <RadioButton
                    android:id="@+id/radio_retrofit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/main_margin"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/retrofit_download_description" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textCustomUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:textColor="@color/colorAccent"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editCustomUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_custom_url"
                    android:textSize="@dimen/textSize"
                    android:inputType="textUri|textMultiLine"
                    android:singleLine="false"
                    android:textColor="@color/primaryEdit" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <com.udacity.loadingbutton.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/main_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>